bitfields/tests/compile_error_cases/bitfield_disable_from_bits.stderr
error[E0599]: no function or associated item named `from_bits` found for struct `Bitfield` in the current scope
  --> tests/compile_error_cases/bitfield_disable_from_bits.rs:15:30
   |
 6 | #[bitfield(u64, from_bits = false)]
   | ----------------------------------- function or associated item `from_bits` not found for this struct
...
15 |     let bitfield = Bitfield::from_bits(0);
   |                              ^^^^^^^^^ function or associated item not found in `Bitfield`
   |
note: if you're trying to build a new `Bitfield` consider using one of the following associated functions:
      Bitfield::new
      Bitfield::new_without_defaults
  --> tests/compile_error_cases/bitfield_disable_from_bits.rs:6:1
   |
 6 | #[bitfield(u64, from_bits = false)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
